# milti-layer-perceptron

./: CMakeLists.txt
includes/: terminal_chars.h
src/: CMakeLists.txt  main.cpp
src/Net/: MultiLayerPerceptron.cpp  MultiLayerPerceptron.h
src/Tetris/: Tetris.cpp  Tetris.h
